# Sim

./: .env.example  .gitignore  CLINICAL_SIM_COMMANDS.md  Documentation.md  README.md  index.html  pyproject.toml  requirements.txt  streamlit_app.py
clinical_sim/: budget.py  cohort.py  csv_bundle.py  layer1.py  layer2.py  layer3.py  llm_compiler.py  loop.py  main.py  rule_tables.py  state.py
clinical_sim/tests/: test_csv_bundle.py  test_generate_dataset_drug_sources.py  test_llm_fallback.py  test_llm_integration.py  test_llm_priors.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_world_model_dataset.py  test_world_model_pipeline.py
clinical_sim/world_model/: __init__.py  adapter.py  dataset.py  drug_rules.py  eval_rollout.py  generate_dataset.py  interface.py  run_demo.py  schema.py  train_baseline.py
config/: README.md
data/manifests/: init_2026-04-14T020417Z.json  ncbi_pubmed_2026-04-14T151035Z.json  ncbi_pubmed_2026-04-14T151159Z.json  openfda_drug_label_2026-04-14T020433Z.json  openfda_drug_label_2026-04-14T020502Z.json  openfda_drug_label_2026-04-14T043306Z.json  openfda_drug_label_2026-04-14T081324Z.json  openfda_drug_label_2026-04-15T090341Z.json
data/processed/: drugbank.ipynb  ncbi.ipynb  openfda.ipynb
frontend/: index.html  server.py
paper/: methodology_draft.tex
scripts/: strip_data_from_git_history.sh  wsl_mtu.sh
src/sim/: __init__.py  cli.py  manifest.py  paths.py  (+1 more)
tests/: test_ncbi.py  test_openfda.py  test_paths_manifest.py  test_settings.py
wsl/: wslconfig.example
(+3 files in other folders)
