[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sim"
version = "0.1.0"
description = "Drug / regulatory data pipeline and simulation inputs"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "numpy>=1.26", "openai>=1.0"]
clinical-sim = ["numpy>=1.26", "openai>=1.0"]

[project.scripts]
sim = "sim.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sim"]

[tool.hatch.build]
dev-mode-dirs = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests", "clinical_sim/tests"]
pythonpath = ["src", "clinical_sim"]
